fix: 基本完成，后续还要优化

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
     ],
     "typescript.tsserver.experimental.enableProjectDiagnostics": false,
     "cSpell.words": [
-        "buka"
+        "buka",
+        "onbuka"
     ]
 }
