--- a/.env
+++ b/.env
@@ -16,13 +16,7 @@ REDIS_PORT=6380
 # REDIS_PASSWORD= # 如果 Redis 设置了密码
 
 # JWT 配置
-JWT_SECRET=your_strong_jwt_secret                  # 请替换为真正强大的密钥
-JWT_ACCESS_TOKEN_EXPIRES_IN=3600s                  # Access Token 有效期 (例如: 1小时)
-JWT_REFRESH_TOKEN_EXPIRES_IN=604800s               # Refresh Token 有效期 (例如: 7天)
-JWT_REFRESH_TOKEN_SECRET=another_strong_jwt_secret # Refresh Token密钥(可与Access Token不同)
-
-# 短信服务商配置 (示例: Onbuka)
-SMS_PROVIDER_ONBUKA_API_KEY=BxGSbzqk                # 替换为你的 Onbuka API Key
-SMS_PROVIDER_ONBUKA_API_SECRET=F5O8VEfM             # 替换为你的 Onbuka API Secret
-SMS_PROVIDER_ONBUKA_APPID=jXHi0vBY                  # Onbuka 应用ID
-SMS_PROVIDER_ONBUKA_BASE_URL=https://api.onbuka.com # 请确认实际的 API URL
+JWT_SECRET=yTFn7XCBpj3DVEGq4z6uHRwA8Sk2bP5LMJmKsQ9ZNWferxthYdvc
+JWT_ACCESS_TOKEN_EXPIRES_IN=3600s    # Access Token 有效期 (例如: 1小时)
+JWT_REFRESH_TOKEN_EXPIRES_IN=604800s # Refresh Token 有效期 (例如: 7天)
+JWT_REFRESH_TOKEN_SECRET=8PkWzEVfnRQS7DXqGm2TcM5BHY3ZvbpJF6LAj4txa9CduKUyrNhg
