--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "helmet": "^8.1.0",
     "iconv-lite": "^0.6.3",
     "ioredis": "^5.6.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.0",
     "nest-winston": "^1.10.2",
     "node-puzzle": "^2.0.2",
