--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,31 @@
 /docs
 /node_modules
 /test
-/test
-/test
-/test
-/test
 /logs
-/logs
+/logs/*
+
+# 忽略所有日志文件，不管在哪个目录
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
+
+# 忽略其他可能的日志目录
+logs/
+log/
+.logs/
+.log/
+
+# 忽略环境变量和配置文件
+.env
+.env.*
+!.env.example
+
+# IDE和编辑器文件
+.idea/
+.vscode/
+*.swp
+*.swo
+.DS_Store
