--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "cache-manager": "^6.4.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "date-fns": "^4.1.0",
     "helmet": "^8.1.0",
     "iconv-lite": "^0.6.3",
     "ioredis": "^5.6.0",
