--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "eslint-plugin-prettier": "^5.2.2",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "madge": "^8.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "prettier": "^3.4.2",
