feat: smpp余额查询成功

--- a/.env
+++ b/.env
@@ -1,22 +1,9 @@
-# 应用配置
-APP_PORT=3000
+# 应用基础配置
 APP_NAME=sms-serve
-APP_ENV=development
 
-# 数据库配置 (MySQL)
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=smsserver
-DB_DATABASE=sms_serve
+# JWT 基础配置
+JWT_ACCESS_TOKEN_EXPIRES_IN=3600s    # Access Token 有效期 (1小时)
+JWT_REFRESH_TOKEN_EXPIRES_IN=604800s # Refresh Token 有效期 (7天)
 
-# Redis 配置
-REDIS_HOST=localhost
+# Redis 基础配置
 REDIS_PORT=6380
-# REDIS_PASSWORD= # 如果 Redis 设置了密码
-
-# JWT 配置
-JWT_SECRET=yTFn7XCBpj3DVEGq4z6uHRwA8Sk2bP5LMJmKsQ9ZNWferxthYdvc
-JWT_ACCESS_TOKEN_EXPIRES_IN=3600s    # Access Token 有效期 (例如: 1小时)
-JWT_REFRESH_TOKEN_EXPIRES_IN=604800s # Refresh Token 有效期 (例如: 7天)
-JWT_REFRESH_TOKEN_SECRET=8PkWzEVfnRQS7DXqGm2TcM5BHY3ZvbpJF6LAj4txa9CduKUyrNhg
