--- a/.gitignore
+++ b/.gitignore
@@ -1,34 +1,22 @@
+# 构建输出
 /dist
-/docs
+
+# 依赖
 /node_modules
-/test
+
+# 日志
 /logs
-/logs/*
-
-# 忽略所有日志文件，不管在哪个目录
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-.pnpm-debug.log*
 
-# 忽略其他可能的日志目录
-logs/
-log/
-.logs/
-.log/
-
-# 忽略环境变量和配置文件
+# 环境变量
 .env
 .env.*
 !.env.example
 
-# IDE和编辑器文件
-.idea/
-.vscode/
-*.swp
-*.swo
+# IDE和系统文件
+.idea
+.vscode
 .DS_Store
-.DS_Store
-/.vscode
+
+# 自动生成的文件
+/public
